2008-01-18  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/plugins/ImportCSV.py (cleanup_column_name): 
	use given, givenname as aliases for firstname;
	give better warning for missing data on row

2008-01-18 Erik De Richter <frederik.de.richter@pandora.be>
   * /po/nl.po: new translations

2008-01-18 Erik De Richter <frederik.de.richter@pandora.be>
   * /src/plugins/StatisticsChart.py: typo :740

2008-01-18 Erik De Richter <frederik.de.richter@pandora.be>
   * /src/plugins/FamilyGroup.py: typo :590

2008-01-18 Erik De Richter <frederik.de.richter@pandora.be>
    * po/gramps.pot: new gramps.pot generated

2008-01-18  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/plugins/DefaultGramplets.py (SurnameCloudGramplet.main): 
	use const.NO_SURNAME to display blank entries
	* src/plugins/SameSurnames.py (SameSurname): exact match surnames
	* src/Simple/_SimpleAccess.py (SimpleAccess.surname): 
	surname() returns const.NO_SURNAME when left blank
	* src/const.py.in: new NO_SURNAME constant; RERUN ./autogen.sh !

2008-01-18  Raphael Ackermann <raphael.ackermann@gmail.com>
    * src/FilterEditor/_EditRule.py
    * src/FilterEditor/_ShowResults.py
    * src/plugins/ExtractCity.py
    * src/plugins/NarrativeWeb.py
    * src/plugins/ChangeNames.py
    * src/plugins/GraphViz.py
    * src/plugins/MediaManager.py
    * src/plugins/FamilyLines.py
    * src/Selectors/_BaseSelector.py
    * src/ObjectSelector/_ObjectSelectorWindow.py
    * src/ObjectSelector/_FamilyFilterFrame.py
    * src/ObjectSelector/_PersonFilterFrame.py
    * src/PageView.py
    * src/Filters/_FilterMenu.py
    * src/Filters/_SearchBar.py
    * src/Filters/_FilterComboBox.py
    * src/Filters/_FilterList.py
    * src/Filters/_FilterParser.py
    * src/Filters/_FilterStore.py
    * src/Filters/_GenericFilter.py
    * src/Filters/_ParamFilter.py
    pylint fixes + init gtk.ListStore() with gobject.TYPE_BOOLEAN types etc


2008-01-18  Raphael Ackermann <raphael.ackermann@gmail.com>
    * src/gen/db/dbdir.py